tests/ui/type-alias-impl-trait/issue-69136-inner-lifetime-resolve-error.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/issue-69136-inner-lifetime-resolve-error.rs:19:65
   |
LL | type Return<A> = impl WithAssoc<A, AssocType = impl SomeTrait + 'a>;
   |                                                                 ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
LL | type Return<A> = impl for<'a> WithAssoc<A, AssocType = impl SomeTrait + 'a>;
   |                       +++++++
help: consider introducing lifetime `'a` here
   |
LL | type Return<'a, A> = impl WithAssoc<A, AssocType = impl SomeTrait + 'a>;
   |             +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0261`.
